# low-latency-data-structures

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  justfile
.github/workflows/: build.yaml
benches/: spsc_latency.rs  spsc_throughput.rs
benches/seqlock/: main.rs
benches/spmc/: main.rs
benches/spsc/: main.rs  spsc_latency.rs  spsc_throughput.rs
examples/seqlock/: bench_handoff.rs  hello.rs
examples/spmc/: bench_capacity_sweep.rs  bench_handoff_under_coherency_contention.rs  bench_lapped.rs  hello.rs
examples/spsc/: bench_drain.rs  bench_handoff.rs  bench_handoff_under_coherency_contention.rs  bench_throttled.rs  hello.rs
src/: lib.rs  mem.rs
src/bench/: fmt.rs  loc.rs  mod.rs  preflight.rs  tsc.rs
src/seqlock/: lock.rs  mod.rs  reader.rs  writer.rs
src/shim/: mod.rs
src/spmc/: consumer.rs  mod.rs  producer.rs  queue.rs
src/spsc/: builder.rs  consumer.rs  mod.rs  producer.rs  queue.rs
