[package]
name = "low-latency-data-structures"
version = "0.1.0"
edition = "2024"

[package.metadata.bin]
rustfmt-unstable = { version = "^1.0.0" }
cargo-show-asm = { version = "^0.2.61" }

[features]
default = []
tests_basic = []
tests_hugepage = []
tests_loom = ["dep:loom"]
tests_dhat = ["dep:dhat"]

[dependencies]
anyhow = "1.0.102"
core_affinity = "0.8.3"
dhat = {version = "0.3.3", optional = true}
loom = {version = "0.7.2", optional = true}
libc = "0.2.186"
static_assertions = "1.1.0"
quanta = "0.12.6"
seq-macro = "0.3.6"
should-it-compile = "0.1.1"
duplicate = "2.0.1"
bytemuck = "1.25.0"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
hdrhistogram = "7.5.4"

# SPSC benches
[[bench]]
name = "spsc"
harness = false

[[example]]
name = "spsc_bench_handoff"
path = "examples/spsc/bench_handoff_under_coherency_contention.rs"
harness = false

[[example]]
name = "spsc_bench_throttled"
path = "examples/spsc/bench_throttled.rs"
harness = false

[[example]]
name = "spsc_bench_drain"
path = "examples/spsc/bench_drain.rs"
harness = false

# SeqLock benches
[[bench]]
name = "seqlock"
harness = false

[[example]]
name = "seqlock_bench_handoff"
path = "examples/seqlock/bench_handoff.rs"
harness = false
